リンク作成

--- a/views/hello/index.ejs
+++ b/views/hello/index.ejs
@@ -4,6 +4,7 @@
       <%= title %></h1>
   </header>
   <div role="main">
+    <p><a href="/hello/add">追加</a></p>  
     <table class="table">
       <%- content %>
     </table>
