--- a/views/hello/show.ejs
+++ b/views/hello/show.ejs
@@ -38,6 +38,8 @@
         <td><%= mydata.age %></td>
       </tr>
     </table>
+    <p><a href="/hello/edit?id=<%= mydata.id %>">編集</a></p>   
+    <p><a href="/hello/delete?id=<%= mydata.id %>">削除</a></p>   
   </div>
 </body>
 
