カラム変更

--- a/views/hello/delete.ejs
+++ b/views/hello/delete.ejs
@@ -22,16 +22,16 @@
     <p><%= content %></p>
     <table class="table">
       <tr>
-        <th>NAME</th>
+        <th>コール名</th>
         <td><%= mydata.name %></td>
       </tr>
       <tr>
-        <th>MAIL</th>
-        <td><%= mydata.mail %></td>
+        <th>訪問先</th>
+        <td><%= mydata.call_to %></td>
       </tr>
       <tr>
-        <th>AGE</th>
-        <td><%= mydata.age %></td>
+        <th>メモ</th>
+        <td><%= mydata.memo %></td>
       </tr>
       <tr>
         <th></th>
