--- a/views/hello/show.ejs
+++ b/views/hello/show.ejs
@@ -26,16 +26,16 @@
         <td><%= mydata.id %></td>
       </tr>
       <tr>
-        <th>NAME</th>
+        <th>コール名</th>
         <td><%= mydata.name %></td>
       </tr>
       <tr>
-        <th>MAIL</th>
-        <td><%= mydata.mail %></td>
+        <th>訪問先</th>
+        <td><%= mydata.call_to %></td>
       </tr>
       <tr>
-        <th>AGE</th>
-        <td><%= mydata.age %></td>
+        <th>メモ</th>
+        <td><%= mydata.memo %></td>
       </tr>
     </table>
     <p><a href="/hello/edit?id=<%= mydata.id %>">編集</a></p>   
