--- a/views/hello/add.ejs
+++ b/views/hello/add.ejs
@@ -22,18 +22,18 @@
     <p><%- content %></p>
     <form method="post" action="/hello/add">
       <div class="form-group">
-        <label for="name">NAME</label>
+        <label for="name">コール名</label>
         <input type="text" name="name" id="name" 
           class="form-control">
       </div>
       <div class="form-group">
-        <label for="mail">MAIL</label>
-        <td><input type="text" name="mail" id="mail" 
+        <label for="call_to">訪問先</label>
+        <td><input type="text" name="call_to" id="call_to" 
           class="form-control">
       </div>
       <div class="form-group">
-        <label for="age">AGE</label>
-        <td><input type="number" name="age" id="age" 
+        <label for="memo">メモ</label>
+        <td><input type="text" name="memo" id="memo" 
           class="form-control">
       </div>
       <input type="submit" value="作成" 
