--- a/views/hello/edit.ejs
+++ b/views/hello/edit.ejs
@@ -24,19 +24,19 @@
       <input type="hidden" name="id" 
         value="<%= mydata.id %>">
       <div class="form-group">
-        <label for="name">NAME</label>
+        <label for="name">コール名</label>
         <input type="text" name="name" id="name" 
           class="form-control" value="<%= mydata.name %>">
       </div>
       <div class="form-group">
-        <label for="mail">MAIL</label>
-        <td><input type="text" name="mail" id="mail" 
-          class="form-control" value="<%= mydata.mail %>">
+        <label for="call_to">訪問先</label>
+        <td><input type="text" name="call_to" id="call_to" 
+          class="form-control" value="<%= mydata.call_to %>">
       </div>
       <div class="form-group">
-        <label for="age">AGE</label>
-        <td><input type="number" name="age" id="age" 
-          class="form-control" value="<%= mydata.age %>">
+        <label for="memo">メモ</label>
+        <td><input type="text" name="memo" id="memo" 
+          class="form-control" value="<%= mydata.memo %>">
       </div>
       <input type="submit" value="更新" 
         class="btn btn-primary">
